--- a/frontend/src/app/components/template/nav/nav.component.html
+++ b/frontend/src/app/components/template/nav/nav.component.html
@@ -14,8 +14,11 @@
                 <i class="material-icons"> people </i>
                 Funcionarios
             </a>
-
-
         </mat-nav-list>
     </mat-sidenav>
+
+    <mat-sidenav-content class="content">
+        <app-home></app-home>
+    </mat-sidenav-content>
+
 </mat-sidenav-container> 
