view funcionarios-crud e empresas-crud

--- a/frontend/src/app/components/template/nav/nav.component.html
+++ b/frontend/src/app/components/template/nav/nav.component.html
@@ -19,6 +19,8 @@
 
     <mat-sidenav-content class="content">
         <app-home></app-home>
+        <app-empresas-crud></app-empresas-crud>
+        <app-funcionarios-crud></app-funcionarios-crud>
     </mat-sidenav-content>
 
 </mat-sidenav-container> 
