corrigindo rota funcionarios

--- a/frontend/src/app/components/template/nav/nav.component.html
+++ b/frontend/src/app/components/template/nav/nav.component.html
@@ -10,7 +10,7 @@
                 <i class="material-icons"> work </i>
                 Empresas
             </a>
-            <a mat-list-item= "/funcionarios">
+            <a mat-list-item routerLink="/funcionarios">
                 <i class="material-icons"> people </i>
                 Funcionarios
             </a>
