--- a/frontend/src/app/components/empresas/empresas-create/empresas-create.component.html
+++ b/frontend/src/app/components/empresas/empresas-create/empresas-create.component.html
@@ -1,6 +1,25 @@
-<button mat-raised-button (click)="createEmpresa()">
-    Salvar
-</button>
-<button mat-raised-button (click)="cancel()">
-    Cancelar
-</button> 
+<mat-card>
+    <mat-card-title> Nova empresa </mat-card-title>
+
+    <form>
+        <mat-form-field> 
+            <input matInput placeholder="Nome" [(ngModel)]="empresa.nome" name="nome">
+        </mat-form-field>
+
+        <mat-form-field>
+            <input matInput placeholder="CNPJ" [(ngModel)]="empresa.cnpj" name="cnpj">
+        </mat-form-field>
+
+        <mat-form-field>
+            <input matInput placeholder="Endereço" [(ngModel)]="empresa.endereco" name="endereco">
+        </mat-form-field>
+    </form>
+
+    <button mat-raised-button (click)="createEmpresa()">
+        Salvar
+    </button>
+    <button mat-raised-button (click)="cancel()">
+        Cancelar
+    </button> 
+    
+</mat-card>
