tabela componente empresas-read

--- a/frontend/src/app/components/empresas/empresas-read/empresas-read.component.html
+++ b/frontend/src/app/components/empresas/empresas-read/empresas-read.component.html
@@ -1,1 +1,34 @@
-<p>empresas-read works!</p>
+<div class="mat-elevation-z2">
+    <table mat-table [dataSource]="empresas">
+
+        <!-- ID column -->
+        <ng-container matColumnDef="id">
+            <th mat-header-cell *matHeaderCellDef> ID </th>
+            <td mat-cell *matCellDef="let empresa"> {{ empresa.id }} </td>
+        </ng-container>
+
+        <!-- Nome column -->
+        <ng-container matColumnDef="nome">
+            <th mat-header-cell *matHeaderCellDef> Nome </th>
+            <td mat-cell *matCellDef="let empresa"> {{ empresa.nome }} </td>
+        </ng-container>
+
+        <!-- Actions column -->
+        <ng-container matColumnDef="actions">
+            <th mat-header-cell *matHeaderCellDef> Ações </th>
+            <td mat-cell *matCellDef="let empresa">
+                <a routerLink="">
+                    <i class="material-icons edit">edit</i>
+                </a>
+                <a routerLink="">
+                    <i class="material-icons delete">delete</i>
+                </a>
+
+            </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
+        <tr mat-row *matRowDef="let empresa; columns: columnsToDisplay"></tr> 
+    </table>
+
+</div> 
