--- a/frontend/src/app/components/empresas/empresas-read/empresas-read.component.html
+++ b/frontend/src/app/components/empresas/empresas-read/empresas-read.component.html
@@ -17,7 +17,7 @@
         <ng-container matColumnDef="actions">
             <th mat-header-cell *matHeaderCellDef> Ações </th>
             <td mat-cell *matCellDef="let empresa">
-                <a routerLink="">
+                <a routerLink="/empresas/update/{{ empresa.id }}">
                     <i class="material-icons edit">edit</i>
                 </a>
                 <a routerLink="">
