--- a/frontend/src/app/components/empresas/empresas-read/empresas-read.component.html
+++ b/frontend/src/app/components/empresas/empresas-read/empresas-read.component.html
@@ -20,7 +20,7 @@
                 <a routerLink="/empresas/update/{{ empresa.id }}">
                     <i class="material-icons edit">edit</i>
                 </a>
-                <a routerLink="">
+                <a routerLink="/empresas/delete/{{ empresa.id }}">
                     <i class="material-icons delete">delete</i>
                 </a>
 
