--- a/frontend/src/app/views/funcionarios-crud/funcionarios-crud.component.html
+++ b/frontend/src/app/views/funcionarios-crud/funcionarios-crud.component.html
@@ -1,1 +1,3 @@
-<p>funcionarios-crud works!</p>
+<button mat-raised-button (click)="navigateToFuncionarioCreate()">
+    Novo Funcionario
+</button>
