--- a/frontend/src/app/views/funcionarios-crud/funcionarios-crud.component.html
+++ b/frontend/src/app/views/funcionarios-crud/funcionarios-crud.component.html
@@ -1,3 +1,4 @@
 <button mat-raised-button (click)="navigateToFuncionarioCreate()">
     Novo Funcionario
 </button>
+<app-funcionarios-read></app-funcionarios-read>
