--- a/frontend/src/app/components/empresas/empresa-funcionarios/empresa-funcionarios.component.html
+++ b/frontend/src/app/components/empresas/empresa-funcionarios/empresa-funcionarios.component.html
@@ -1,3 +1,13 @@
+<form>
+    <button mat-raised-button (click)="AddFuncionario()">
+        Adicionar Funcionario
+    </button>
+    
+    <mat-form-field> 
+        <input matInput placeholder="ID" [(ngModel)]="id_funcionario" name="id_funcionario">
+    </mat-form-field>
+</form>
+
 <div class="mat-elevation-z2">
     <table mat-table [dataSource]="funcionarios">
 
