--- a/frontend/src/app/components/empresas/empresa-funcionarios/empresa-funcionarios.component.html
+++ b/frontend/src/app/components/empresas/empresa-funcionarios/empresa-funcionarios.component.html
@@ -26,7 +26,7 @@
         <!-- Actions column -->
         <ng-container matColumnDef="delete">
             <th mat-header-cell *matHeaderCellDef> Remover </th>
-            <td mat-cell *matCellDef="let funcionario">
+            <td mat-cell *matCellDef="let funcionario" (click)="removeFuncionario(funcionario)">
                 <i class="material-icons delete">delete</i>
             </td>
         </ng-container>
