--- a/frontend/src/app/components/funcionarios/funcionario-empresas/funcionario-empresas.component.html
+++ b/frontend/src/app/components/funcionarios/funcionario-empresas/funcionario-empresas.component.html
@@ -1,3 +1,9 @@
+<mat-card>
+    <mat-card-title>
+        Funcionario: {{ funcionario.nome }}
+    </mat-card-title>
+</mat-card>
+
 <form>
     <button mat-raised-button (click)="addEmpresa()">
         Adicionar Empresa
