--- a/frontend/src/app/components/empresas/empresa-funcionarios/empresa-funcionarios.component.html
+++ b/frontend/src/app/components/empresas/empresa-funcionarios/empresa-funcionarios.component.html
@@ -1,3 +1,9 @@
+<mat-card>
+    <mat-card-title>
+        Empresa: {{ empresa.nome }}
+    </mat-card-title>
+</mat-card>
+
 <form>
     <button mat-raised-button (click)="AddFuncionario()">
         Adicionar Funcionario
