--- a/frontend/src/app/views/funcionarios-crud/funcionarios-crud.component.html
+++ b/frontend/src/app/views/funcionarios-crud/funcionarios-crud.component.html
@@ -1,3 +1,8 @@
+<mat-card>
+    <mat-card-title>
+        Funcionarios
+    </mat-card-title>
+</mat-card>
 <button mat-raised-button (click)="navigateToFuncionarioCreate()">
     Novo Funcionario
 </button>
