frontend: corrigindo nomes

--- a/frontend/src/app/components/template/nav/nav.component.html
+++ b/frontend/src/app/components/template/nav/nav.component.html
@@ -4,7 +4,7 @@
         <mat-nav-list class="nav-list">
             <a mat-list-item routerLink="/">
                 <i class="material-icons"> home </i>
-                Inicio
+                Início
             </a>
             <a mat-list-item routerLink="/empresas">
                 <i class="material-icons"> work </i>
@@ -12,7 +12,7 @@
             </a>
             <a mat-list-item routerLink="/funcionarios">
                 <i class="material-icons"> people </i>
-                Funcionarios
+                Funcionários
             </a>
         </mat-nav-list>
     </mat-sidenav>
