--- a/frontend/src/app/components/empresas/empresa-funcionarios/empresa-funcionarios.component.html
+++ b/frontend/src/app/components/empresas/empresa-funcionarios/empresa-funcionarios.component.html
@@ -6,7 +6,7 @@
 
 <form>
     <button mat-raised-button (click)="AddFuncionario()">
-        Adicionar Funcionario
+        Adicionar Funcionário
     </button>
     
     <mat-form-field> 
@@ -25,7 +25,7 @@
 
         <!-- Nome column -->
         <ng-container matColumnDef="nome">
-            <th mat-header-cell *matHeaderCellDef> Nome </th>
+            <th mat-header-cell *matHeaderCellDef> Funcionário </th>
             <td mat-cell *matCellDef="let funcionario"> {{ funcionario.nome }} </td>
         </ng-container>
 
