--- a/frontend/src/app/components/funcionarios/funcionario-empresas/funcionario-empresas.component.html
+++ b/frontend/src/app/components/funcionarios/funcionario-empresas/funcionario-empresas.component.html
@@ -1,6 +1,6 @@
 <mat-card>
     <mat-card-title>
-        Funcionario: {{ funcionario.nome }}
+        Funcionário: {{ funcionario.nome }}
     </mat-card-title>
 </mat-card>
 
@@ -25,7 +25,7 @@
 
         <!-- Nome column -->
         <ng-container matColumnDef="nome">
-            <th mat-header-cell *matHeaderCellDef> Nome </th>
+            <th mat-header-cell *matHeaderCellDef> Empresa </th>
             <td mat-cell *matCellDef="let empresa"> {{ empresa.nome }} </td>
         </ng-container>
 
