--- a/frontend/src/app/views/funcionarios-crud/funcionarios-crud.component.html
+++ b/frontend/src/app/views/funcionarios-crud/funcionarios-crud.component.html
@@ -1,9 +1,9 @@
 <mat-card>
     <mat-card-title>
-        Funcionarios
+        Funcionários
     </mat-card-title>
 </mat-card>
 <button mat-raised-button (click)="navigateToFuncionarioCreate()">
-    Novo Funcionario
+    Novo Funcionário
 </button>
 <app-funcionarios-read></app-funcionarios-read>
